kubernetes/overlays/production/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-components
spec:
  template:
    spec:
      containers:
        - name: ui-components
          resources:
            requests:
              memory: 128Mi
              cpu: 0.1
            limits:
              memory: 512Mi
              cpu: 1.0
