kubernetes/overlays/production/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ui-components
  annotations:
    # nginx ingress
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # cert-manager
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: clusterissuer-letsencrypt-production
    # external-dns
    external-dns.alpha.kubernetes.io/hostname: graph.quicklookup.com
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: "false"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"

spec:
  rules:
    - host: graph.quicklookup.com
      http:
        paths:
          - path: /(.*)
            backend:
              serviceName: ui-components
              servicePort: http
  tls:
    - hosts:
        - graph.quicklookup.com
      secretName: ui-components-tls-secret
